turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:4: error: STOP is already defined as value STOP
val STOP = 0;
    ^Turmite:22: error: not found: value etat
	rule(etat)(couleurActuelle)(MVT_SUIVANT) match
             ^