turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 0;

val STOP = 0;
val RIEN = 1;
val GAUCHE = 2;
val DEMITOUR = 4;
val DROITE = 8;

def brosse(couleur:Color)
{
	setCouleurBrosse(couleur); baisseBrosse(); leveBrosse()
}

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) 
{
   	var pos = 0
	
	while(colors(pos)!=getCouleurSol())
		pos = pos+1
	
	rule(etat)(couleurActuelle)(MVT_SUIVANT) match
	{
		case STOP => 
		case RIEN => avance()
		case GAUCHE => gauche(); avance()
		case DEMITOUR => gauche(); gauche()
		case DROITE => droite(); avance()
	}
	
	if(pos!=colors.length-1)
		brosse(colors(pos+1))
	else brosse(colors(0))
	
	avance()
}
